--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 
 <footer id="contact" >
   <div class="container text-center">
-    <small>© 2026 AutoConnect. All rights reserved.</small>
+    <small>© 2026 AutoNgx. All rights reserved.</small>
   </div>
 </footer>
