--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
   <div class="container-fluid">
 
     <a class="navbar-brand text-white" href="https://renixauto.com">
-      Renix Auto
+      AutoNgx
     </a>
 
    <button class="navbar-toggler" id="navbarToggle"
