--- a/templates/side_navbar.html
+++ b/templates/side_navbar.html
@@ -67,7 +67,7 @@
   <aside id="sidebar" class="sidebar bg-white border-end collapsed">
     
 
-    <h5 class="sidebar-title mt-4">AutoConnect</h5>
+    <h5 class="sidebar-title mt-4">AutoNgx</h5>
 
     <!-- Dashboard -->
     <div class="nav-section">
